hhh-team/hhh-pharmas-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhh-pharmas-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: hhh-pharmas-webapi-label
  template:
    metadata:
      labels:
        pod: hhh-pharmas-webapi-label
    spec:
      containers:
        - name: hhh-pharmas-webapi-container
          image: holubov/hhh-pharmas-webapi:1.0.0-55
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
