hhh-team/hhh-pharmas-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hhh-pharmas-webapi
spec:
  type: ClusterIP
  selector:
    pod: hhh-pharmas-webapi-label
  ports:
    - name: webapi-s-port
      protocol: TCP
      port: 80
      targetPort: 8080
